<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Stiffener_Lobby">


    <LinearLayout
        android:id="@+id/statusContainer_p41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/status1_p41"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:text="Deck1" />

        <TextView
            android:id="@+id/status2_p41"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:text="Girder1" />

    </LinearLayout>


    <TextView
        android:id="@+id/title_stiffenerNumber_p41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/title_stiffenerNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_stiffener_data_p41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/label_stiffener_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_stiffenerNumber_p41" />

    <Button
        android:id="@+id/button_rivets_p41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="36dp"
        android:onClick="launchRivets"
        android:text="@string/button_rivets"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_stiffener_data_p41" />

    <Button
        android:id="@+id/button_defects_p41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:onClick="launchDefects"
        android:text="@string/button_defects"
        app:layout_constraintStart_toEndOf="@+id/button_rivets_p41"
        app:layout_constraintTop_toTopOf="@+id/button_rivets_p41" />

    <TextView
        android:id="@+id/label_other_data_p41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/label_other_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_rivets_p41" />

    <Button
        android:id="@+id/button_l_angle_p41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="32dp"
        android:onClick="launch_L_Angle"
        android:text="@string/button_l_angle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_other_data_p41" />

    <Button
        android:id="@+id/button_t_angle_p41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:onClick="launch_T_Angle"
        android:text="@string/button_t_angle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toEndOf="@+id/button_l_angle_p41"
        app:layout_constraintTop_toTopOf="@+id/button_l_angle_p41" />

    <Button
        android:id="@+id/button_back_to_back_l_angle_p41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:onClick="launchB2B_L_Angle"
        android:text="@string/button_back_to_back_l_angle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.361"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_l_angle_p41" />

    <Button
        android:id="@+id/button_gusset_plate_p41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="40dp"
        android:onClick="launchGussetPlate"
        android:text="@string/button_gusset_plate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_back_to_back_l_angle_p41" />

    <CheckBox
        android:id="@+id/checkboxCompletedText_p41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="20dp"
        android:text="@string/checkboxCompletedText"
        app:layout_constraintBottom_toTopOf="@+id/button_submit_p41"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.884"
        app:layout_constraintStart_toEndOf="@+id/button_gusset_plate_p41" />

    <Button
        android:id="@+id/button_submit_p41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="24dp"
        android:onClick="submit"
        android:text="@string/button_submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>