<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Bays_Lobby">

    <TextView
        android:id="@+id/textView39_p10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/title_bays_and_stiffeners"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_stiffener_instructions_p10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/table_title_instruction_stiffener"
        app:layout_constraintBottom_toTopOf="@+id/tablehorizontalScrollView_p10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView39_p10"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/label_stiffeners_no_in_blue_p10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="76dp"
        android:text="@string/label_stiffeners_no_in_blue"
        android:textColor="#3F51B5"
        app:layout_constraintBottom_toTopOf="@+id/label_stiffener_instructions_p10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/label_bays_no_in_red_p10"
        android:layout_width="92dp"
        android:layout_height="17dp"
        android:layout_marginStart="36dp"
        android:text="@string/label_bays_no_in_red"
        android:textColor="#E91E63"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/table_labelBellow_scroll_instructions_p10"
        app:layout_constraintVertical_bias="0.0" />

    <HorizontalScrollView
        android:id="@+id/tablehorizontalScrollView_p10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView39_p10"
        app:layout_constraintVertical_bias="0.417">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TableRow
                android:id="@+id/stiffener_row"

                android:layout_width="wrap_content"
                android:layout_height="match_parent">



            </TableRow>

            <TableRow
                android:id="@+id/bays_row"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="25dp"
                android:background="#3F51B5">



            </TableRow>
        </TableLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/table_labelBellow_scroll_instructions_p10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/table_labelBellow_scroll_instructions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tablehorizontalScrollView_p10"
        app:layout_constraintVertical_bias="0.069" />
    <CheckBox
        android:id="@+id/checkBoxCompleted_p10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/checkboxCompletedText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonSubmit_p10"
        app:layout_constraintHorizontal_bias="0.902"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/table_labelBellow_scroll_instructions_p10"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buttonSubmit_p10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:onClick="submit"
        android:text="@string/button_submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.89"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/table_labelBellow_scroll_instructions_p10"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>